fixed table on mobile

--- a/_sass/_article.scss
+++ b/_sass/_article.scss
@@ -130,4 +130,7 @@ subheading h5{
 
 .research-table {
     margin-top: 12px;
+    display: block;
+    overflow-x: auto;
+    width: 101%;
 }
